[gd_scene load_steps=3 format=3 uid="uid://6ni3r5y0sc8i"]

[ext_resource type="Script" path="res://scenes/MapMenu.gd" id="1_sw7oy"]
[ext_resource type="Texture2D" uid="uid://bemkd2wtra4ld" path="res://images/main_bk.png" id="2_8e336"]

[node name="main" type="Node"]

[node name="MapMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_sw7oy")
metadata/_edit_use_anchors_ = true

[node name="Bg" type="Sprite2D" parent="MapMenu"]
position = Vector2(11, -33)
texture = ExtResource("2_8e336")

[node name="MainMapContainer" type="VBoxContainer" parent="MapMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -116.5
offset_right = 120.0
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2

[node name="mobile_button" type="Button" parent="MapMenu/MainMapContainer"]
layout_mode = 2
text = "Play Mobile"

[node name="browse_maps_button" type="Button" parent="MapMenu/MainMapContainer"]
layout_mode = 2
text = "Select Map"

[node name="Images" type="Button" parent="MapMenu/MainMapContainer"]
layout_mode = 2
text = "Manage Images"

[node name="back_button" type="Button" parent="MapMenu/MainMapContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Back"

[node name="Label" type="Label" parent="MapMenu"]
layout_mode = 0
offset_left = -95.0
offset_top = -213.0
offset_right = 106.0
offset_bottom = -155.0
theme_override_colors/font_color = Color(0.811765, 0.509804, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 33
text = "Map Menu"

[connection signal="pressed" from="MapMenu/MainMapContainer/mobile_button" to="MapMenu" method="_on_mobile_button_pressed"]
[connection signal="pressed" from="MapMenu/MainMapContainer/browse_maps_button" to="MapMenu" method="_on_browse_maps_button_pressed"]
[connection signal="pressed" from="MapMenu/MainMapContainer/Images" to="MapMenu" method="_on_images_pressed"]
[connection signal="pressed" from="MapMenu/MainMapContainer/back_button" to="MapMenu" method="_on_back_button_pressed"]
