[gd_scene load_steps=5 format=3 uid="uid://6ni3r5y0sc8i"]

[ext_resource type="Script" path="res://scenes/MapMenu.gd" id="1_sw7oy"]
[ext_resource type="Texture2D" uid="uid://bemkd2wtra4ld" path="res://images/main_bk.png" id="2_8e336"]
[ext_resource type="LabelSettings" uid="uid://1oyxx8ys1m6d" path="res://font.res" id="3_wrqm5"]
[ext_resource type="Script" path="res://src/Scroll_Label.gd" id="4_iiqel"]

[node name="main" type="Node"]

[node name="MapMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_sw7oy")
metadata/_edit_use_anchors_ = true

[node name="Bg" type="Sprite2D" parent="MapMenu"]
position = Vector2(11, -33)
texture = ExtResource("2_8e336")

[node name="MainMapContainer" type="VBoxContainer" parent="MapMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -116.5
offset_right = 120.0
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2

[node name="default_map_button" type="Button" parent="MapMenu/MainMapContainer"]
layout_mode = 2
text = "Default Map"

[node name="random_map" type="Button" parent="MapMenu/MainMapContainer"]
layout_mode = 2
text = "Randomized Map"

[node name="new_map_button" type="Button" parent="MapMenu/MainMapContainer"]
layout_mode = 2
text = "Create New Map"

[node name="Maps_button" type="Button" parent="MapMenu/MainMapContainer"]
layout_mode = 2
text = "Browse Maps"

[node name="back_button" type="Button" parent="MapMenu/MainMapContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Back"

[node name="OptionContainer" type="VBoxContainer" parent="MapMenu"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -267.5
offset_right = 250.0
offset_bottom = 267.5
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="MapMenu/OptionContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
tab_alignment = 1

[node name="Video" type="TabBar" parent="MapMenu/OptionContainer/TabContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="General_Label" type="Label" parent="MapMenu/OptionContainer/TabContainer/Video"]
layout_mode = 0
offset_left = 26.0
offset_top = 2.0
offset_right = 95.0
offset_bottom = 31.0
text = "General"
label_settings = ExtResource("3_wrqm5")

[node name="Resolution_Label" type="Label" parent="MapMenu/OptionContainer/TabContainer/Video"]
layout_mode = 0
offset_left = 82.0
offset_top = 42.0
offset_right = 173.0
offset_bottom = 68.0
text = "Resolution :"

[node name="Resolution_Optionbutton" type="OptionButton" parent="MapMenu/OptionContainer/TabContainer/Video"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 26.0
offset_top = 72.5
offset_right = 210.0
offset_bottom = 103.5
item_count = 10
popup/item_0/text = "640x480"
popup/item_0/id = 0
popup/item_1/text = "800x600"
popup/item_1/id = 1
popup/item_2/text = "1024x768"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3
popup/item_4/text = "1366x768"
popup/item_4/id = 4
popup/item_5/text = "1600x900"
popup/item_5/id = 5
popup/item_6/text = "1920x1080"
popup/item_6/id = 6
popup/item_7/text = "2560x1440"
popup/item_7/id = 7
popup/item_8/text = "3840x2160"
popup/item_8/id = 8
popup/item_9/text = "7680x4320"
popup/item_9/id = 9

[node name="Vsync_Label" type="Label" parent="MapMenu/OptionContainer/TabContainer/Video"]
layout_mode = 0
offset_left = 100.0
offset_top = 132.0
offset_right = 145.0
offset_bottom = 158.0
text = "Vsync"

[node name="Vsync_OptionButton" type="OptionButton" parent="MapMenu/OptionContainer/TabContainer/Video"]
layout_mode = 0
offset_left = 26.0
offset_top = 169.0
offset_right = 210.0
offset_bottom = 201.0
item_count = 4
popup/item_0/text = "off"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Adaptative"
popup/item_2/id = 2
popup/item_3/text = "MailBox"
popup/item_3/id = 3

[node name="Sound" type="TabBar" parent="MapMenu/OptionContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="General_Label" type="Label" parent="MapMenu/OptionContainer/TabContainer/Sound"]
layout_mode = 0
offset_left = 10.0
offset_top = 46.0
offset_right = 48.0
offset_bottom = 69.0
text = "General volume :"

[node name="General_HScrollBar" type="HScrollBar" parent="MapMenu/OptionContainer/TabContainer/Sound"]
layout_mode = 0
offset_left = 10.0
offset_top = 78.0
offset_right = 458.0
offset_bottom = 94.0
value = 70.0
rounded = true

[node name="Scroll_Label" type="Label" parent="MapMenu/OptionContainer/TabContainer/Sound/General_HScrollBar"]
layout_mode = 0
offset_left = 456.0
offset_top = -5.0
offset_right = 489.0
offset_bottom = 21.0
text = "70%"
script = ExtResource("4_iiqel")

[node name="Music_Label" type="Label" parent="MapMenu/OptionContainer/TabContainer/Sound"]
layout_mode = 0
offset_left = 10.0
offset_top = 99.0
offset_right = 142.0
offset_bottom = 125.0
text = "Music volume :"

[node name="Music_HScrollBar" type="HScrollBar" parent="MapMenu/OptionContainer/TabContainer/Sound"]
layout_mode = 0
offset_left = 10.0
offset_top = 124.0
offset_right = 458.0
offset_bottom = 140.0
value = 67.0
rounded = true

[node name="Scroll_Label" type="Label" parent="MapMenu/OptionContainer/TabContainer/Sound/Music_HScrollBar"]
layout_mode = 0
offset_left = 456.0
offset_top = -5.0
offset_right = 489.0
offset_bottom = 21.0
text = "67%"
script = ExtResource("4_iiqel")

[node name="SFX_Label" type="Label" parent="MapMenu/OptionContainer/TabContainer/Sound"]
layout_mode = 0
offset_left = 10.0
offset_top = 146.0
offset_right = 142.0
offset_bottom = 172.0
text = "SFX volume :"

[node name="SFX_HScrollBar" type="HScrollBar" parent="MapMenu/OptionContainer/TabContainer/Sound"]
layout_mode = 0
offset_left = 10.0
offset_top = 171.0
offset_right = 458.0
offset_bottom = 187.0
value = 67.0
rounded = true

[node name="Scroll_Label" type="Label" parent="MapMenu/OptionContainer/TabContainer/Sound/SFX_HScrollBar"]
layout_mode = 0
offset_left = 456.0
offset_top = -5.0
offset_right = 489.0
offset_bottom = 21.0
text = "67%"
script = ExtResource("4_iiqel")

[node name="Container" type="HBoxContainer" parent="MapMenu/OptionContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Apply_button" type="Button" parent="MapMenu/OptionContainer/Container"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Apply
"

[node name="Return_button" type="Button" parent="MapMenu/OptionContainer/Container"]
layout_mode = 2
text = "Return
"

[node name="LoginContainer" type="VBoxContainer" parent="MapMenu"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -267.5
offset_right = 250.0
offset_bottom = 267.5
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="MapMenu/LoginContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
tab_alignment = 1

[node name="Login" type="TabBar" parent="MapMenu/LoginContainer/TabContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Username_label" type="Label" parent="MapMenu/LoginContainer/TabContainer/Login"]
layout_mode = 0
offset_top = 50.0
offset_right = 80.0
offset_bottom = 76.0
text = "Email"

[node name="Username" type="LineEdit" parent="MapMenu/LoginContainer/TabContainer/Login"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 111.0

[node name="Password_label" type="Label" parent="MapMenu/LoginContainer/TabContainer/Login"]
layout_mode = 0
offset_top = 120.0
offset_right = 75.0
offset_bottom = 146.0
text = "Password"

[node name="Password" type="LineEdit" parent="MapMenu/LoginContainer/TabContainer/Login"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 181.0
secret = true

[node name="Login_button2" type="Button" parent="MapMenu/LoginContainer/TabContainer/Login"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 30)
layout_mode = 0
offset_top = 200.0
offset_right = 8.0
offset_bottom = 208.0
text = "Login"

[node name="Sign Up" type="TabBar" parent="MapMenu/LoginContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Signup_label" type="Label" parent="MapMenu/LoginContainer/TabContainer/Sign Up"]
layout_mode = 0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 36.0
text = "Create a new Account:"

[node name="Email_label" type="Label" parent="MapMenu/LoginContainer/TabContainer/Sign Up"]
layout_mode = 0
offset_top = 50.0
offset_right = 80.0
offset_bottom = 76.0
text = "Email"

[node name="Email" type="LineEdit" parent="MapMenu/LoginContainer/TabContainer/Sign Up"]
layout_mode = 0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 111.0

[node name="Username_label" type="Label" parent="MapMenu/LoginContainer/TabContainer/Sign Up"]
layout_mode = 0
offset_top = 130.0
offset_right = 80.0
offset_bottom = 156.0
text = "Username"

[node name="Username" type="LineEdit" parent="MapMenu/LoginContainer/TabContainer/Sign Up"]
layout_mode = 0
offset_top = 160.0
offset_right = 200.0
offset_bottom = 191.0

[node name="Password_label" type="Label" parent="MapMenu/LoginContainer/TabContainer/Sign Up"]
layout_mode = 0
offset_top = 200.0
offset_right = 75.0
offset_bottom = 226.0
text = "Password"

[node name="Password" type="LineEdit" parent="MapMenu/LoginContainer/TabContainer/Sign Up"]
layout_mode = 0
offset_top = 240.0
offset_right = 200.0
offset_bottom = 271.0
secret = true

[node name="Signup_button" type="Button" parent="MapMenu/LoginContainer/TabContainer/Sign Up"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 0
offset_top = 300.0
offset_right = 150.0
offset_bottom = 331.0
text = "Signup"

[node name="Container" type="HBoxContainer" parent="MapMenu/LoginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Apply_button" type="Button" parent="MapMenu/LoginContainer/Container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Apply
"

[node name="Return_button" type="Button" parent="MapMenu/LoginContainer/Container"]
layout_mode = 2
text = "Return
"

[node name="PlayContainer" type="VBoxContainer" parent="MapMenu"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -267.5
offset_right = 250.0
offset_bottom = 267.5
grow_horizontal = 2
grow_vertical = 2

[node name="MapContainer" type="TabContainer" parent="MapMenu/PlayContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
tab_alignment = 1

[node name="Map Button" type="Button" parent="MapMenu/PlayContainer/MapContainer"]
layout_mode = 2
text = "Default Map"

[node name="Container" type="HBoxContainer" parent="MapMenu/PlayContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Play_button" type="Button" parent="MapMenu/PlayContainer/Container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Play
"

[node name="Return_button" type="Button" parent="MapMenu/PlayContainer/Container"]
layout_mode = 2
text = "Return
"

[node name="Label" type="Label" parent="MapMenu"]
layout_mode = 0
offset_left = -106.0
offset_top = -214.0
offset_right = 95.0
offset_bottom = -156.0
theme_override_colors/font_color = Color(0.811765, 0.509804, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 33
text = "Select a Map"

[connection signal="pressed" from="MapMenu/MainMapContainer/default_map_button" to="MapMenu" method="_on_default_map_button_pressed"]
[connection signal="pressed" from="MapMenu/MainMapContainer/random_map" to="MapMenu" method="_on_random_map_pressed"]
[connection signal="pressed" from="MapMenu/MainMapContainer/new_map_button" to="MapMenu" method="_on_new_map_button_pressed"]
[connection signal="pressed" from="MapMenu/MainMapContainer/Maps_button" to="MapMenu" method="_on_maps_button_pressed"]
[connection signal="pressed" from="MapMenu/MainMapContainer/back_button" to="MapMenu" method="_on_back_button_pressed"]
[connection signal="item_selected" from="MapMenu/OptionContainer/TabContainer/Video/Resolution_Optionbutton" to="MapMenu" method="_on_resolution_optionbutton_item_selected"]
[connection signal="item_selected" from="MapMenu/OptionContainer/TabContainer/Video/Vsync_OptionButton" to="MapMenu" method="_on_vsync_option_button_item_selected"]
[connection signal="value_changed" from="MapMenu/OptionContainer/TabContainer/Sound/General_HScrollBar" to="MapMenu" method="_on_general_h_scroll_bar_value_changed"]
[connection signal="value_changed" from="MapMenu/OptionContainer/TabContainer/Sound/General_HScrollBar" to="MapMenu/OptionContainer/TabContainer/Sound/General_HScrollBar/Scroll_Label" method="_on_h_scroll_bar_value_changed"]
[connection signal="value_changed" from="MapMenu/OptionContainer/TabContainer/Sound/Music_HScrollBar" to="MapMenu" method="_on_music_h_scroll_bar_value_changed"]
[connection signal="value_changed" from="MapMenu/OptionContainer/TabContainer/Sound/Music_HScrollBar" to="MapMenu/OptionContainer/TabContainer/Sound/Music_HScrollBar/Scroll_Label" method="_on_h_scroll_bar_value_changed"]
[connection signal="value_changed" from="MapMenu/OptionContainer/TabContainer/Sound/SFX_HScrollBar" to="MapMenu" method="_on_sfx_h_scroll_bar_value_changed"]
[connection signal="value_changed" from="MapMenu/OptionContainer/TabContainer/Sound/SFX_HScrollBar" to="MapMenu/OptionContainer/TabContainer/Sound/SFX_HScrollBar/Scroll_Label" method="_on_h_scroll_bar_value_changed"]
[connection signal="pressed" from="MapMenu/OptionContainer/Container/Apply_button" to="MapMenu" method="_on_apply_button_pressed"]
[connection signal="pressed" from="MapMenu/OptionContainer/Container/Return_button" to="MapMenu" method="_on_return_button_pressed"]
[connection signal="pressed" from="MapMenu/LoginContainer/TabContainer/Login/Login_button2" to="MapMenu" method="_on_login_button_2_pressed"]
[connection signal="pressed" from="MapMenu/LoginContainer/Container/Apply_button" to="MapMenu" method="_on_apply_button_pressed"]
[connection signal="pressed" from="MapMenu/LoginContainer/Container/Return_button" to="MapMenu" method="_on_return_button_pressed"]
[connection signal="pressed" from="MapMenu/PlayContainer/Container/Play_button" to="MapMenu" method="_on_play_button_pressed"]
[connection signal="pressed" from="MapMenu/PlayContainer/Container/Return_button" to="MapMenu" method="_on_return_button_pressed"]
